###############################################################################
# (c) Copyright 2018-2020 CERN for the benefit of the LHCb Collaboration      #
###############################################################################
add_subdirectory(clustering)
add_subdirectory(tracking)
add_subdirectory(pv)
add_subdirectory(selections)
