###############################################################################
# (c) Copyright 2018-2020 CERN for the benefit of the LHCb Collaboration      #
###############################################################################
add_subdirectory(monitoring)
add_subdirectory(non_event_data)
